--- a/src/assets/ertdfgcvb/style.css
+++ b/src/assets/ertdfgcvb/style.css
@@ -1,4 +1,7 @@
 @font-face {
-    font-family: 'Open Sans';
-    src: url();
+    font-family: 'NeueBit';
+    font-style: bold;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts/NeueBit.otf);
 }
