--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,29 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+}
+
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0rem;
   text-align: center;
-  /* cursor: none; */
 }
+
 
 @font-face {
   font-family: 'Calcio';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/fonts/Calcio.ttf) format('ttf');
+  src: url(/fonts/Calcio.ttf);
 }
 
 @font-face {
@@ -46,37 +58,9 @@
   src: url(/fonts/Montreal-Medium.otf);
 }
 
-.line{
-  width: 100%;
-  height: 1px;
-  background-color: #e0e0e0;
-  margin: 1rem 0;
+*{
+  cursor: url('/cursors/normal.cur'), auto;
 }
-
-.pixel-container {
-  display: flex;
-  flex-wrap: wrap;
-  pointer-events: none;
-}
-
-.pixel {
-  width: 10px;
-  height: 10px;
-  background-color: black;
-  margin: 1px;
-}
-
-.fade-enter {
-  opacity: 0;
-}
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 500ms ease-in;
-}
-.fade-exit {
-  opacity: 1;
-}
-.fade-exit-active {
-  opacity: 0;
-  transition: opacity 500ms ease-in;
+.pointy{
+  cursor: url('/cursors/pointer.cur'), pointer;
 }
