merge: resolve conflicts

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./fonts/Calcio.ttf");
+  src: url('./fonts/Calcio.ttf');
 }
 
 :root {
