chore: scrollbar hide class

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,11 @@ button:focus-visible {
   }
 }
 
+.scrollbar-hide {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
